--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "bootstrap": "^5.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-inputs-validation": "^4.9.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-validation": "^3.0.7",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
